--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@ exclude: ['README.md', 'Gemfile', 'Gemfile.lock']
 
 # Site settings
 title: Decatek | Game Developer
-email: your-email@domain.com
+author: Decatek
+email: info@decatek.net
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/example" # the subpath of your site, e.g. /blog/
+  This is my personal portfolio webpage, here you can find the project I worked on.
+  There might be interesting Open Source software as well as some articles about software development in general.
+baseurl: "/home"
 url: "http://decatek.github.io" # the base hostname & protocol for your site
 twitter_username: JDecatek
 github_username:  Decatek
