--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,10 @@ email: info@decatek.net
 description: > # this means to ignore newlines until "baseurl:"
   This is my personal portfolio webpage, here you can find the project I worked on.
   There might be interesting Open Source software as well as some articles about software development in general.
-baseurl: "/home"
 url: "http://decatek.github.io" # the base hostname & protocol for your site
 twitter_username: JDecatek
 github_username:  Decatek
 
 # Build settings
-markdown: redcarpet
+markdown: kramdown
 permalink: /:year/:title:output_ext
